@@ -40,6 +40,7 @@ ODE16.2: Much better. Floating card is actually fine (in theory). But3rd row col
 
 0.5.0 (unreleased)
 =====
+- Added GutHub Actions CI builds for Java 8 and 9. [#95](https://github.com/tzaeschke/ode4j/pull/95)
 - Added default logger for demos and tests. [#94](https://github.com/tzaeschke/ode4j/pull/94)
 - Added Android API compliance checker, now for API level 24 (the lowest that ode4j passed without changes)
   [#93](https://github.com/tzaeschke/ode4j/pull/93)
